POM is updated